--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
     <title>AVATAR : Master the elements</title>
   </head>
   <body>
-    <h1>Master the elements!</h1>
+    <div class="container">
 
+      <div class="row">
+        <div class="col-sm">
+          <h1>Avatar - Master the Elements</h1>
+          <p id="result"></p>
+        </div>
+      </div>
+
+      <div class="row elements">
+      <div class="col-sm-4 element earth">
+      </div>
+      <div class="col-sm-4 element fire">
+      </div>
+      <div class="col-sm-4 element water">
+      </div>
+      <div class="col-sm-4 element air">
+      </div>
+      </div>
+
+
+
+
+
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
