Add values of elements on click, set win and loss conditions. IT WORKS! AHHH

--- a/index.html
+++ b/index.html
@@ -17,23 +17,36 @@
       <div class="row">
         <div class="col-sm">
           <h1>Avatar - Master the Elements</h1>
-          <p id="result"></p>
+          <h3>Strengh needed to achieve Avatar State: <span id="strength"></span></h3>
+          <h3>Current Strength: <span id="userStrength"></span></h3>
         </div>
       </div>
 
       <div class="row elements">
-      <div class="col-sm-4 element earth">
-      </div>
-      <div class="col-sm-4 element fire">
-      </div>
-      <div class="col-sm-4 element water">
-      </div>
-      <div class="col-sm-4 element air">
-      </div>
+        <div class="col-sm-3 element earth">
+        </div>
+        <div class="col-sm-3 element fire">
+        </div>
+        <div class="col-sm-3 element water">
+        </div>
+        <div class="col-sm-3 element air">
+        </div>
       </div>
 
+      <div class="row">
+        <div class="col-sm-6">
+            <h2>Victories: <span id="win"></span></h2>
+        </div>
+        <div class="col-sm-6">
+            <h2>Defeats: <span id="lose"></span></h2>
+        </div>
+      </div>
 
-
+      <div class="row">
+        <div class="col">
+        <h2 id="result"></h2>
+        </div>
+      </div>  
 
 
     </div>
