Track and update user's score for each click

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
 
       <div class="row elements">
         <div class="col-sm-3 element earth">
+          <p>earth</p>
         </div>
         <div class="col-sm-3 element fire">
+          <p>fire</p>
         </div>
         <div class="col-sm-3 element water">
+          <p>water</p>
         </div>
         <div class="col-sm-3 element air">
+          <p>air</p>
         </div>
       </div>
 
