--- a/index.html
+++ b/index.html
@@ -14,26 +14,50 @@
   <body>
     <div class="container">
 
+    <div class="row aang">
+        <div class="col-sm d-flex justify-content-center">
+          <img class="img-fluid" src ="assets/imgs/avatar_state.png"/>
+        </div>
+      </div>
       <div class="row">
         <div class="col-sm">
-          <h1>Avatar - Master the Elements</h1>
-          <h3>Strengh needed to achieve Avatar State: <span id="strength"></span></h3>
-          <h3>Current Strength: <span id="userStrength"></span></h3>
+          <h2 id="result"></h2>
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-sm-8">
+          <video width="100%" height="300">
+            <source src="assets/imgs/avatar_video.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="col-sm-4">
+          <p> Sozin's Comet has passed through the night sky, greatly enhancing the strength of the Fire Nation. Aang must master the "Avatar State" to defeat Fire Lord Ozai and bring peace to the world. Help him by combining the powers of the four elements. Be warned however, if the strength of the elements surpasses the limits in which Aang can handle, he will perish and the world will fall into chaos.</p>
+        </div>
+      </div>
+
+      <div class = "row">
+      <div class = "col-sm-6">
+                  <p>Power level to achieve Avatar State: <span id="strength"></span></p>
+      </div>
+      <div class = "col-sm-6">
+        <p>Current Power Level: <span id="userStrength"></span></p>
+      </div>
+    </div>
+
+
       <div class="row elements">
+        <div class="col-sm-3 element water">
+          <img class="img-fluid" src="assets/imgs/water.png"/>
+        </div>
         <div class="col-sm-3 element earth">
-          <p>earth</p>
+          <img class="img-fluid" src="assets/imgs/earth.png"/>
         </div>
         <div class="col-sm-3 element fire">
-          <p>fire</p>
-        </div>
-        <div class="col-sm-3 element water">
-          <p>water</p>
+          <img class="img-fluid" src="assets/imgs/fire.png"/>
         </div>
         <div class="col-sm-3 element air">
-          <p>air</p>
+          <img class="img-fluid" src="assets/imgs/air.png"/>
         </div>
       </div>
 
@@ -45,12 +69,6 @@
             <h2>Defeats: <span id="lose"></span></h2>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col">
-        <h2 id="result"></h2>
-        </div>
-      </div>  
 
 
     </div>
