Additional styling, create reset click area for user

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <div class="row my-2">
         <div class="col-sm">
           <h2 id="result" class="animated flipInX"></h2>
+          <h3 id="playAgain"></h3>
         </div>
       </div>
 
