--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col-sm-7 result_gif">
         </div>
         <div class="col-sm-5 lora about">
-          <p> Sozin's Comet has passed through the night sky, greatly enhancing the strength of the Fire Nation. Aang must master the "Avatar State" to defeat Fire Lord Ozai and bring peace to the world. Help him by combining the powers of the four elements. Be warned however, if the strength of the elements surpasses the limits in which Aang can handle, he will perish and the world will fall into chaos. Good Luck!</p>
+          <p> Sozin's Comet has passed through the night sky, greatly enhancing the strength of the Fire Nation. Aang must master the "Avatar State" to defeat Fire Lord Ozai and bring peace to the world. Help him by combining the powers of the four elements. Be warned, however, if the strength of the elements surpasses the limits in which Aang can handle, he will perish and the world will fall into chaos. Good Luck!</p>
 
       <div class="row justify-content-center">
         <div class="col-sm-6 lora text-center score">
@@ -71,17 +71,10 @@
         </div>
       </div>
 
-
-
-
-
-
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
     <script src="assets/js/game.js"></script>
   </body>
 </html>
