Adjust positioning of background on elements

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         </div>
       </div>
 
-      <div class="row justify-content-md-center elements">
-        <div class="col-lg-2 element water">
+      <div class="row justify-content-center elements">
+        <div class="col-2 element water">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated jello" src="assets/imgs/water.png"/>
         </div>
-        <div class="col-lg-2 element earth">
+        <div class="col-2 element earth">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated shake" src="assets/imgs/earth.png"/>
         </div>
-        <div class="col-lg-2 element fire">
+        <div class="col-2 element fire">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated swing" src="assets/imgs/fire.png"/>
         </div>
-        <div class="col-lg-2 element air">
+        <div class="col-2 element air">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated wobble" src="assets/imgs/air.png"/>
         </div>
       </div>
