--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       </div>
 
       <div class="row justify-content-center elements">
-        <div class="col-2 element water">
+        <div class="col-3 col-sm-2 element water">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated jello" src="assets/imgs/water.png"/>
         </div>
-        <div class="col-2 element earth">
+        <div class="col-3 col-sm-2 element earth">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated shake" src="assets/imgs/earth.png"/>
         </div>
-        <div class="col-2 element fire">
+        <div class="col-3 col-sm-2 element fire">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated swing" src="assets/imgs/fire.png"/>
         </div>
-        <div class="col-2 element air">
+        <div class="col-3 col-sm-2 element air">
           <img class="img-fluid w-75 my-2 mx-auto d-block hvr-pulse animated wobble" src="assets/imgs/air.png"/>
         </div>
       </div>
