Change column breakpoints and sizes

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       </div>
 
       <div class="row my-3">
-        <div class="col-sm-7 result_gif">
+        <div class="col-md-6 col-lg-7 result_gif">
         </div>
-        <div class="col-sm-5 lora about">
+        <div class="col-md-6 col-lg-5 lora about">
           <p> Sozin's Comet has passed through the night sky, greatly enhancing the strength of the Fire Nation. Aang must master the "Avatar State" to defeat Fire Lord Ozai and bring peace to the world. Help him by combining the powers of the four elements. Be warned, however, if the strength of the elements surpasses the limits in which Aang can handle, he will perish and the world will fall into chaos. Good Luck!</p>
 
       <div class="row justify-content-center">
